assignment3-initial/src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from c:\D\BKU\PPL\as3\assignment3-initial\src\main\mt22\parser\MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{}'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'auto'", "'break'", 
                     "'boolean'", "'do'", "'else'", "'false'", "'float'", 
                     "'for'", "'function'", "'if'", "'integer'", "'return'", 
                     "'string'", "'true'", "'while'", "'void'", "'out'", 
                     "'continue'", "'of'", "'inherit'", "'array'", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", 
                     "'&&'", "'||'", "'=='", "'!='", "'<'", "'<='", "'>'", 
                     "'>='", "'::'", "'('", "')'", "<INVALID>", "<INVALID>", 
                     "'['", "']'", "'.'", "<INVALID>", "';'", "':'", "<INVALID>", 
                     "'''", "'\"'", "'\\'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "COMMEMTLINE", "COMMENTBOX", 
                      "ARR", "INT", "FL", "STR", "AUTO", "BREAK", "BOOLEAN", 
                      "DO", "ELSE", "FALSE", "FLOAT", "FOR", "FUNCTION", 
                      "IF", "INTEGER", "RETURN", "STRING", "TRUE", "WHILE", 
                      "VOID", "OUT", "CONTINUE", "OF", "INHERIT", "ARRAY", 
                      "ID", "SPECIAL_FUNC", "ADD", "MINUS", "MUL", "DIV", 
                      "PER", "NOT", "AND", "OR", "EQUAL", "DIF", "SMALLER", 
                      "SMALLER_OR_EQUAL", "BIGGER", "BIGGER_OR_EQUAL", "DOUBLECOLON", 
                      "LB", "RB", "LCB", "RCB", "LSB", "RSB", "DOT", "COMMA", 
                      "SEMI", "COLON", "EQ", "SQ", "DQ", "BS", "WS", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_decllist = 1
    RULE_decltail = 2
    RULE_decl = 3
    RULE_vardecl = 4
    RULE_initiazation = 5
    RULE_initcy = 6
    RULE_funcdecl = 7
    RULE_paramlist = 8
    RULE_paramprime = 9
    RULE_param = 10
    RULE_body = 11
    RULE_tstmt = 12
    RULE_fstmt = 13
    RULE_blockstmt = 14
    RULE_stmtlist = 15
    RULE_stmt = 16
    RULE_asstmt = 17
    RULE_lhs = 18
    RULE_ifstmt = 19
    RULE_forstmt = 20
    RULE_whilestmt = 21
    RULE_dowhilestmt = 22
    RULE_breakstmt = 23
    RULE_contstmt = 24
    RULE_retstmt = 25
    RULE_callstmt = 26
    RULE_exprlist = 27
    RULE_exprprime = 28
    RULE_expr = 29
    RULE_string = 30
    RULE_relational = 31
    RULE_logical = 32
    RULE_adding = 33
    RULE_multiplying = 34
    RULE_not_logical = 35
    RULE_sign = 36
    RULE_indexop = 37
    RULE_funccall = 38
    RULE_arglist = 39
    RULE_arg = 40
    RULE_typ = 41
    RULE_val = 42
    RULE_vartype = 43
    RULE_atyp = 44
    RULE_fourarrtype = 45
    RULE_arraytype = 46
    RULE_dimensionlist = 47
    RULE_idlist = 48

    ruleNames =  [ "program", "decllist", "decltail", "decl", "vardecl", 
                   "initiazation", "initcy", "funcdecl", "paramlist", "paramprime", 
                   "param", "body", "tstmt", "fstmt", "blockstmt", "stmtlist", 
                   "stmt", "asstmt", "lhs", "ifstmt", "forstmt", "whilestmt", 
                   "dowhilestmt", "breakstmt", "contstmt", "retstmt", "callstmt", 
                   "exprlist", "exprprime", "expr", "string", "relational", 
                   "logical", "adding", "multiplying", "not_logical", "sign", 
                   "indexop", "funccall", "arglist", "arg", "typ", "val", 
                   "vartype", "atyp", "fourarrtype", "arraytype", "dimensionlist", 
                   "idlist" ]

    EOF = Token.EOF
    T__0=1
    COMMEMTLINE=2
    COMMENTBOX=3
    ARR=4
    INT=5
    FL=6
    STR=7
    AUTO=8
    BREAK=9
    BOOLEAN=10
    DO=11
    ELSE=12
    FALSE=13
    FLOAT=14
    FOR=15
    FUNCTION=16
    IF=17
    INTEGER=18
    RETURN=19
    STRING=20
    TRUE=21
    WHILE=22
    VOID=23
    OUT=24
    CONTINUE=25
    OF=26
    INHERIT=27
    ARRAY=28
    ID=29
    SPECIAL_FUNC=30
    ADD=31
    MINUS=32
    MUL=33
    DIV=34
    PER=35
    NOT=36
    AND=37
    OR=38
    EQUAL=39
    DIF=40
    SMALLER=41
    SMALLER_OR_EQUAL=42
    BIGGER=43
    BIGGER_OR_EQUAL=44
    DOUBLECOLON=45
    LB=46
    RB=47
    LCB=48
    RCB=49
    LSB=50
    RSB=51
    DOT=52
    COMMA=53
    SEMI=54
    COLON=55
    EQ=56
    SQ=57
    DQ=58
    BS=59
    WS=60
    ERROR_CHAR=61
    UNCLOSE_STRING=62
    ILLEGAL_ESCAPE=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def decllist(self):
            return self.getTypedRuleContext(MT22Parser.DecllistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.ID:
                self.state = 98
                self.decllist()


            self.state = 101
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecllistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def decltail(self):
            return self.getTypedRuleContext(MT22Parser.DecltailContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decllist




    def decllist(self):

        localctx = MT22Parser.DecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decllist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.decl()
            self.state = 104
            self.decltail()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecltailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def decltail(self):
            return self.getTypedRuleContext(MT22Parser.DecltailContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decltail




    def decltail(self):

        localctx = MT22Parser.DecltailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decltail)
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.decl()
                self.state = 107
                self.decltail()
                pass
            elif token in [MT22Parser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decl)
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def vartype(self):
            return self.getTypedRuleContext(MT22Parser.VartypeContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def initiazation(self):
            return self.getTypedRuleContext(MT22Parser.InitiazationContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vardecl)
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.idlist()
                self.state = 117
                self.match(MT22Parser.COLON)
                self.state = 118
                self.vartype()
                self.state = 119
                self.match(MT22Parser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.initiazation()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitiazationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def initcy(self):
            return self.getTypedRuleContext(MT22Parser.InitcyContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_initiazation




    def initiazation(self):

        localctx = MT22Parser.InitiazationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_initiazation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.initcy()
            self.state = 125
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitcyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def initcy(self):
            return self.getTypedRuleContext(MT22Parser.InitcyContext,0)


        def val(self):
            return self.getTypedRuleContext(MT22Parser.ValContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def atyp(self):
            return self.getTypedRuleContext(MT22Parser.AtypContext,0)


        def EQ(self):
            return self.getToken(MT22Parser.EQ, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_initcy




    def initcy(self):

        localctx = MT22Parser.InitcyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_initcy)
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.match(MT22Parser.ID)
                self.state = 128
                self.match(MT22Parser.COMMA)
                self.state = 129
                self.initcy()
                self.state = 130
                self.match(MT22Parser.COMMA)
                self.state = 131
                self.val()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.match(MT22Parser.ID)
                self.state = 134
                self.match(MT22Parser.COLON)
                self.state = 135
                self.atyp()
                self.state = 136
                self.match(MT22Parser.EQ)
                self.state = 137
                self.val()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.ID)
            else:
                return self.getToken(MT22Parser.ID, i)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def paramlist(self):
            return self.getTypedRuleContext(MT22Parser.ParamlistContext,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def body(self):
            return self.getTypedRuleContext(MT22Parser.BodyContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_funcdecl




    def funcdecl(self):

        localctx = MT22Parser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funcdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(MT22Parser.ID)
            self.state = 142
            self.match(MT22Parser.COLON)
            self.state = 143
            self.match(MT22Parser.FUNCTION)
            self.state = 144
            self.typ()
            self.state = 145
            self.match(MT22Parser.LB)
            self.state = 146
            self.paramlist()
            self.state = 147
            self.match(MT22Parser.RB)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 148
                self.match(MT22Parser.INHERIT)
                self.state = 149
                self.match(MT22Parser.ID)


            self.state = 152
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(MT22Parser.ParamContext,0)


        def paramprime(self):
            return self.getTypedRuleContext(MT22Parser.ParamprimeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_paramlist




    def paramlist(self):

        localctx = MT22Parser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paramlist)
        try:
            self.state = 158
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.OUT, MT22Parser.INHERIT, MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.param()
                self.state = 155
                self.paramprime()
                pass
            elif token in [MT22Parser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamprimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def param(self):
            return self.getTypedRuleContext(MT22Parser.ParamContext,0)


        def paramprime(self):
            return self.getTypedRuleContext(MT22Parser.ParamprimeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_paramprime




    def paramprime(self):

        localctx = MT22Parser.ParamprimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paramprime)
        try:
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.match(MT22Parser.COMMA)
                self.state = 161
                self.param()
                self.state = 162
                self.paramprime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.match(MT22Parser.COMMA)
                self.state = 165
                self.param()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def atyp(self):
            return self.getTypedRuleContext(MT22Parser.AtypContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_param




    def param(self):

        localctx = MT22Parser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 169
                self.match(MT22Parser.INHERIT)


            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.OUT:
                self.state = 172
                self.match(MT22Parser.OUT)


            self.state = 175
            self.match(MT22Parser.ID)
            self.state = 176
            self.match(MT22Parser.COLON)
            self.state = 177
            self.atyp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockstmt(self):
            return self.getTypedRuleContext(MT22Parser.BlockstmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_body




    def body(self):

        localctx = MT22Parser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.blockstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockstmt(self):
            return self.getTypedRuleContext(MT22Parser.BlockstmtContext,0)


        def stmt(self):
            return self.getTypedRuleContext(MT22Parser.StmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_tstmt




    def tstmt(self):

        localctx = MT22Parser.TstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_tstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.T__0, MT22Parser.LCB]:
                self.state = 181
                self.blockstmt()
                pass
            elif token in [MT22Parser.BREAK, MT22Parser.DO, MT22Parser.FOR, MT22Parser.IF, MT22Parser.RETURN, MT22Parser.WHILE, MT22Parser.CONTINUE, MT22Parser.ID, MT22Parser.SPECIAL_FUNC]:
                self.state = 182
                self.stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockstmt(self):
            return self.getTypedRuleContext(MT22Parser.BlockstmtContext,0)


        def stmt(self):
            return self.getTypedRuleContext(MT22Parser.StmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_fstmt




    def fstmt(self):

        localctx = MT22Parser.FstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_fstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.T__0, MT22Parser.LCB]:
                self.state = 185
                self.blockstmt()
                pass
            elif token in [MT22Parser.BREAK, MT22Parser.DO, MT22Parser.FOR, MT22Parser.IF, MT22Parser.RETURN, MT22Parser.WHILE, MT22Parser.CONTINUE, MT22Parser.ID, MT22Parser.SPECIAL_FUNC]:
                self.state = 186
                self.stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(MT22Parser.LCB, 0)

        def RCB(self):
            return self.getToken(MT22Parser.RCB, 0)

        def stmtlist(self):
            return self.getTypedRuleContext(MT22Parser.StmtlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_blockstmt




    def blockstmt(self):

        localctx = MT22Parser.BlockstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_blockstmt)
        try:
            self.state = 196
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.LCB]:
                self.enterOuterAlt(localctx, 1)
                self.state = 189
                self.match(MT22Parser.LCB)
                self.state = 192
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MT22Parser.BREAK, MT22Parser.DO, MT22Parser.FOR, MT22Parser.IF, MT22Parser.RETURN, MT22Parser.WHILE, MT22Parser.CONTINUE, MT22Parser.ID, MT22Parser.SPECIAL_FUNC]:
                    self.state = 190
                    self.stmtlist()
                    pass
                elif token in [MT22Parser.RCB]:
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 194
                self.match(MT22Parser.RCB)
                pass
            elif token in [MT22Parser.T__0]:
                self.enterOuterAlt(localctx, 2)
                self.state = 195
                self.match(MT22Parser.T__0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmtlist(self):
            return self.getTypedRuleContext(MT22Parser.StmtlistContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def stmt(self):
            return self.getTypedRuleContext(MT22Parser.StmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_stmtlist




    def stmtlist(self):
